# fe2io-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: audio.rs  error.rs  event.rs  main.rs  websocket.rs
