[package]
name = "fe2io-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.26.2"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-aac", "symphonia-alac", "minimp3", "hound"] }
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.26"
env_logger = "0.11.6"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
ureq = "3.0.8"
http = "1.2.0"

[profile.release]
opt-level = 'z'
panic = 'abort'
strip = true
