[package]
name = "fe2io-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = "0.12.12"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-aac", "symphonia-alac", "minimp3", "hound"] }
clap = { version = "4.5.30", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = "0.26.2"
futures-util = { version = "0.3.31", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 'z'
panic = 'abort'
strip = true
